Refactored some logic

--- a/public/chat.html
+++ b/public/chat.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Chat application</h1>
+
+	<!-- Loading socket library from own server! -->
+    <script src="socket.io/socket.io.js"></script>
+
+    <script src="js/socket-chat.js"></script>
 </body>
 </html>
