Implementing chat rooms

--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     <h1>Chat application</h1>
+    <form action="chat.html">
+    	<input type="text" name="name" placeholder="username" required autofocus>
+        <select name="room">
+            <option value="generalRoom" selected>General room chat</option>
+            <option value="alternativeRoom">Alternative room chat</option>
+        </select>
+    	<button type="Submit">Enter to chat</button>
+    </form>
 </body>
 </html>
