Added vendor files

--- a/public/chat.html
+++ b/public/chat.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Chat application</title>
+    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
     <h1>Chat application</h1>
 
-	<!-- Loading socket library from own server! -->
-    <script src="socket.io/socket.io.js"></script>
+    <script src="vendor/jquery/jquery-3.3.1.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Loading socket library from own server! -->
+    <script src="socket.io/socket.io.js"></script>
     <script src="js/socket-chat.js"></script>
 </body>
 </html>
