--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,26 @@
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>Chat application</h1>
-    <form action="chat.html">
-    	<input type="text" name="name" placeholder="username" required autofocus>
-        <select name="room">
-            <option value="generalRoom" selected>General room chat</option>
-            <option value="alternativeRoom">Alternative room chat</option>
-        </select>
-    	<button type="Submit">Enter to chat</button>
-    </form>
+    <div class="container">
+        <div class="col-lg-6 offset-lg-3 mt-5">
+            <h1>Chat application</h1>
+            <form action="chat.html" class="mt-3">
+                <div class="form-group">
+                    <label for="usernameInput">Write your username</label>
+                    <input type="text" name="name" class="form-control" id="usernameInput" placeholder="username" required autofocus pattern="[A-Za-z0-9.\-_\*\/\|]{3,}" aria-describedby="usernameHelp">
+                    <small id="usernameHelp" className="form-text text-muted">At least 3 chars. Spaces are not valid chars</small>
+                </div>
+                <div class="form-group">
+                    <label for="roomSelector">Select room chat</label>
+                    <select class="form-control" name="room" id="roomSelector">
+                        <option value="generalRoom" selected>General room chat</option>
+                        <option value="alternativeRoom">Alternative room chat</option>
+                    </select>
+                </div>
+                <button type="Submit" class="btn btn-primary mt-2">Enter to chat</button>
+            </form>
+        </div>
+    </div>
 
     <script src="vendor/jquery/jquery-3.3.1.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
