--- a/public/chat.html
+++ b/public/chat.html
@@ -1,20 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Chat application</title>
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Chat application</title>
+	<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>Chat application</h1>
+	<div class="container">
+		<div class="col-lg-6 offset-lg-3 mt-5">
+			<h1>Joined to chat</h1>
+		</div>
+		<div class="col">
 
-    <script src="vendor/jquery/jquery-3.3.1.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+			<div class="row">
+				<div class="col-md-8">
+					<h2>Conversation</h2>
 
-    <!-- Loading socket library from own server! -->
-    <script src="socket.io/socket.io.js"></script>
-    <script src="js/socket-chat.js"></script>
+
+					<div class="card mb-3">
+						<div class="card-header bg-info text-white">
+							<!-- <p class="card-text text-left">Private message from: xxxxxxxxxxxx</p>
+							<p class="card-text text-right font-italic"><small>2018-08-16 12:02:45</small></p> -->
+
+
+							<div class="row">
+								<div class="col-sm-8">
+									<small>Private message from: xxxxxxxxxxxx</small>
+								</div>
+								<div class="col-sm-4 text-right">
+									<small>2018-08-16 12:02:45</small>
+								</div>
+							</div>
+
+
+
+						</div>
+						<div class="card-body">
+							<h5 class="card-title">Card title</h5>
+							<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+							<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error nihil rem, tempora sit facilis distinctio labore hic maiores officiis molestias! Molestiae ipsum commodi ab laudantium culpa laborum sit corporis temporibus.</p>
+							<a href="#" class="card-link">Card link</a>
+							<a href="#" class="card-link">Another link</a>
+						</div>
+						<!-- <div class="card-footer text-right">
+						    <p class="card-text"><small class="text-muted">2018-08-16 12:02:45</small></p>
+						</div> -->
+					</div>
+
+					<div class="card mb-3">
+						<div class="card-header text-muted">
+							<div class="row">
+								<div class="col-sm-8">
+									<small>Public message from: xxxxxxxxxxxx</small>
+								</div>
+								<div class="col-sm-4 text-right">
+									<small>2018-08-16 12:02:45</small>
+								</div>
+							</div>
+						</div>
+						<div class="card-body">
+							<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error nihil rem, tempora sit facilis distinctio labore hic maiores officiis molestias! Molestiae ipsum commodi ab laudantium culpa laborum sit corporis temporibus.</p>
+						</div>
+						<!-- <div class="card-footer text-right">
+						    <p class="card-text"><small class="text-muted">2018-08-16 12:02:45</small></p>
+						</div> -->
+					</div>
+
+					<div class="card mb-3">
+						<div class="card-header text-muted">
+							<!-- <p class="card-text text-left">Public message from: xxxxxxxxxxxx</p>
+							<p class="card-text text-right font-italic"><small>2018-08-16 12:02:45</small></p> -->
+							<div class="row">
+								<div class="col-sm-8">
+									<small>Public message from: xxxxxxxxxxxx</small>
+								</div>
+								<div class="col-sm-4 text-right">
+									<small>2018-08-16 12:02:45</small>
+								</div>
+							</div>
+						</div>
+						<div class="card-body">
+							<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error nihil rem, tempora sit facilis distinctio labore hic maiores officiis molestias! Molestiae ipsum commodi ab laudantium culpa laborum sit corporis temporibus.</p>
+						</div>
+						<!-- <div class="card-footer text-right">
+						    <p class="card-text"><small class="text-muted">2018-08-16 12:02:45</small></p>
+						</div> -->
+					</div>
+
+
+
+					<form class="mt-4">
+						<div class="form-group">
+							<label for="message">Your message</label>
+							<textarea class="form-control" id="message" name="message" rows="3"></textarea>
+						</div>
+					</form>
+
+
+
+
+
+
+				</div>
+				<div class="col-sm-12 col-md-4">
+					<h2>Users on chat</h2>
+					<ul class="list-group">
+						<li class="list-group-item active">Cras justo odio</li>
+						<li class="list-group-item">Dapibus ac facilisis in</li>
+						<li class="list-group-item">Morbi leo risus</li>
+						<li class="list-group-item">Porta ac consectetur ac</li>
+						<li class="list-group-item">Vestibulum at eros</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- scripts -->
+	<script src="vendor/jquery/jquery-3.3.1.min.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+	<!-- Loading socket library from own server! -->
+	<script src="socket.io/socket.io.js"></script>
+	<script src="js/socket-chat.js"></script>
 </body>
 </html>
