--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
             <form action="chat.html" class="mt-3">
                 <div class="form-group">
                     <label for="usernameInput">Write your username</label>
-                    <input type="text" name="name" class="form-control" id="usernameInput" placeholder="username" required autofocus pattern="[A-Za-z0-9.\-_\*\/\|]{3,}" aria-describedby="usernameHelp">
-                    <small id="usernameHelp" className="form-text text-muted">At least 3 chars. Spaces are not valid chars</small>
+                    <input type="text" name="name" class="form-control" id="usernameInput" placeholder="username" required autofocus pattern="[A-Za-z0-9.\-_\*\/\|]{3,12}" aria-describedby="usernameHelp">
+                    <small id="usernameHelp" className="form-text text-muted">At least 3 chars, max 12 chars. Spaces are not valid chars</small>
                 </div>
                 <div class="form-group">
                     <label for="roomSelector">Select room chat</label>
@@ -29,6 +29,7 @@
         </div>
     </div>
 
+    <!-- scripts -->
     <script src="vendor/jquery/jquery-3.3.1.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
