Added button for send messages

--- a/public/chat.html
+++ b/public/chat.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
-	<div class="container">
+	<div class="container mb-5">
 		<div class="col-lg-6 offset-lg-3 mt-5">
 			<h1>Joined to chat</h1>
 		</div>
@@ -96,6 +96,8 @@
 							<label for="message">Your message</label>
 							<textarea class="form-control" id="message" name="message" rows="3"></textarea>
 						</div>
+
+						<button type="Submit" class="btn btn-primary mt-2">Send message</button>
 					</form>
 
 
