--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container mb-5">
         <div class="col-lg-6 offset-lg-3 mt-5">
             <h1>Chat application</h1>
             <form action="chat.html" class="mt-3">
