--- a/public/chat.html
+++ b/public/chat.html
@@ -108,12 +108,7 @@
 				</div>
 				<div class="col-sm-12 col-md-4">
 					<h2>Users on chat</h2>
-					<ul class="list-group">
-						<li class="list-group-item active">Cras justo odio</li>
-						<li class="list-group-item">Dapibus ac facilisis in</li>
-						<li class="list-group-item">Morbi leo risus</li>
-						<li class="list-group-item">Porta ac consectetur ac</li>
-						<li class="list-group-item">Vestibulum at eros</li>
+					<ul class="list-group" id="userListConnected">
 					</ul>
 				</div>
 			</div>
@@ -126,6 +121,7 @@
 
 	<!-- Loading socket library from own server! -->
 	<script src="socket.io/socket.io.js"></script>
+	<script src="js/socket-chat-logic.js"></script>
 	<script src="js/socket-chat.js"></script>
 </body>
 </html>
