--- a/public/chat.html
+++ b/public/chat.html
@@ -91,7 +91,7 @@
 
 
 
-					<form class="mt-4">
+					<form class="mt-4" id="formNewMessage">
 						<div class="form-group">
 							<label for="message">Your message</label>
 							<textarea class="form-control" id="message" name="message" rows="3"></textarea>
