Fixed value on HTML attribute

--- a/public/chat.html
+++ b/public/chat.html
@@ -94,7 +94,7 @@
 					<form class="mt-4" id="formNewMessage">
 						<div class="form-group">
 							<label for="message">Your message</label>
-							<textarea class="form-control" id="message" name="message" rows="3" autofocus required autocomplete="false"></textarea>
+							<textarea class="form-control" id="message" name="message" rows="3" autofocus required autocomplete="off"></textarea>
 						</div>
 
 						<button type="Submit" class="btn btn-primary mt-2">Send message</button>
