--- a/public/chat.html
+++ b/public/chat.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Chat application</title>
 	<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	<div class="container mb-5">
@@ -17,79 +18,30 @@
 			<div class="row">
 				<div class="col-md-8">
 					<h2>Conversation</h2>
-
-
-					<div class="card mb-3">
-						<div class="card-header bg-info text-white">
-							<!-- <p class="card-text text-left">Private message from: xxxxxxxxxxxx</p>
-							<p class="card-text text-right font-italic"><small>2018-08-16 12:02:45</small></p> -->
-
-
-							<div class="row">
-								<div class="col-sm-8">
-									<small>Private message from: xxxxxxxxxxxx</small>
-								</div>
-								<div class="col-sm-4 text-right">
-									<small>2018-08-16 12:02:45</small>
+					<div id="chatBox">
+<!--
+						<div class="card mb-3">
+							<div class="card-header bg-info text-white">
+								<div class="row">
+									<div class="col-sm-8">
+										<small>Private message from: xxxxxxxxxxxx</small>
+									</div>
+									<div class="col-sm-4 text-right">
+										<small>2018-08-16 12:02:45</small>
+									</div>
 								</div>
 							</div>
-
-
-
-						</div>
-						<div class="card-body">
-							<h5 class="card-title">Card title</h5>
-							<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-							<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error nihil rem, tempora sit facilis distinctio labore hic maiores officiis molestias! Molestiae ipsum commodi ab laudantium culpa laborum sit corporis temporibus.</p>
-							<a href="#" class="card-link">Card link</a>
-							<a href="#" class="card-link">Another link</a>
-						</div>
-						<!-- <div class="card-footer text-right">
-						    <p class="card-text"><small class="text-muted">2018-08-16 12:02:45</small></p>
-						</div> -->
-					</div>
-
-					<div class="card mb-3">
-						<div class="card-header text-muted">
-							<div class="row">
-								<div class="col-sm-8">
-									<small>Public message from: xxxxxxxxxxxx</small>
-								</div>
-								<div class="col-sm-4 text-right">
-									<small>2018-08-16 12:02:45</small>
-								</div>
+							<div class="card-body">
+								<h5 class="card-title">Card title</h5>
+								<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error nihil rem, tempora sit facilis distinctio labore hic maiores officiis molestias! Molestiae ipsum commodi ab laudantium culpa laborum sit corporis temporibus.</p>
+								<a href="#" class="card-link">Card link</a>
+								<a href="#" class="card-link">Another link</a>
 							</div>
 						</div>
-						<div class="card-body">
-							<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error nihil rem, tempora sit facilis distinctio labore hic maiores officiis molestias! Molestiae ipsum commodi ab laudantium culpa laborum sit corporis temporibus.</p>
-						</div>
-						<!-- <div class="card-footer text-right">
-						    <p class="card-text"><small class="text-muted">2018-08-16 12:02:45</small></p>
-						</div> -->
-					</div>
+-->
 
-					<div class="card mb-3">
-						<div class="card-header text-muted">
-							<!-- <p class="card-text text-left">Public message from: xxxxxxxxxxxx</p>
-							<p class="card-text text-right font-italic"><small>2018-08-16 12:02:45</small></p> -->
-							<div class="row">
-								<div class="col-sm-8">
-									<small>Public message from: xxxxxxxxxxxx</small>
-								</div>
-								<div class="col-sm-4 text-right">
-									<small>2018-08-16 12:02:45</small>
-								</div>
-							</div>
-						</div>
-						<div class="card-body">
-							<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error nihil rem, tempora sit facilis distinctio labore hic maiores officiis molestias! Molestiae ipsum commodi ab laudantium culpa laborum sit corporis temporibus.</p>
-						</div>
-						<!-- <div class="card-footer text-right">
-						    <p class="card-text"><small class="text-muted">2018-08-16 12:02:45</small></p>
-						</div> -->
-					</div>
-
-
+					</div><!-- /#chatBox -->
 
 					<form class="mt-4" id="formNewMessage">
 						<div class="form-group">
