New message form has been improved

--- a/public/chat.html
+++ b/public/chat.html
@@ -46,16 +46,10 @@
 					<form class="mt-4" id="formNewMessage">
 						<div class="form-group">
 							<label for="message">Your message</label>
-							<textarea class="form-control" id="message" name="message" rows="3" autofocus required autocomplete="off"></textarea>
+							<input type="text" class="form-control" id="message" name="message" autofocus required autocomplete="off" />
 						</div>
-
-						<button type="Submit" class="btn btn-primary mt-2">Send message</button>
+						<button type="submit" class="btn btn-primary mt-2">Send message</button>
 					</form>
-
-
-
-
-
 
 				</div>
 				<div class="col-sm-12 col-md-4">
