--- a/public/chat.html
+++ b/public/chat.html
@@ -10,19 +10,19 @@
 </head>
 <body>
 	<div class="container mb-5">
-		<div class="col-lg-6 offset-lg-3 mt-5">
+		<div class="col-lg-6 offset-lg-3 mt-4">
 			<h1>Joined to chat</h1>
 		</div>
 		<div class="col">
 
 			<div class="row">
-				<div class="col-md-8">
+				<div class="col-md-8 mb-2">
 					<h2>Conversation</h2>
 					<div id="chatBox">
 
 					</div><!-- /#chatBox -->
 
-					<form class="mt-4" id="formNewMessage">
+					<form class="mt-2" id="formNewMessage">
 						<div class="form-group">
 							<label for="message">Your message</label>
 							<input type="text" class="form-control" id="message" name="message" autofocus required autocomplete="off" />
@@ -31,7 +31,7 @@
 					</form>
 
 				</div>
-				<div class="col-sm-12 col-md-4">
+				<div class="col-sm-12 col-md-4 mb-2">
 					<h2>Users on chat</h2>
 					<ul class="list-group" id="userListConnected">
 					</ul>
