--- a/public/chat.html
+++ b/public/chat.html
@@ -7,6 +7,7 @@
 	<title>Chat application</title>
 	<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="favicon.ico">
 </head>
 <body>
 	<div class="container mb-5">
